# chief-in-pocket

./: CLAUDE.md  Doc.md  README.md
.claude/agents/: dataset-auditor.md  frontend-code-reviewer.md  (+2 more)
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/data/processed/: llm_enrichment_report.json  recipes.json  recipes_enriched.json
backend/data/raw/: recipes.csv
backend/scripts/: chat_demo.py  enrich_recipes_llm.py  import_recipes.py  run_chat_api.py  run_mcp_server.py
backend/src/recipes/: __init__.py  classification.py  classifier.py  enrichment.py  exceptions.py  importer.py  models.py  normalization.py  recipe_classifier_prompt.py
backend/src/recipes/chat/: __init__.py  agent.py  api.py  history.py  synthesis.py  transcription.py
backend/src/recipes/mcp_server/: __init__.py  dependencies.py  meal_plan_tools.py  models.py  server.py  tools.py
backend/src/recipes/repositories/: __init__.py  json_recipe_repository.py  recipe_repository.py
backend/src/recipes/services/: __init__.py  meal_plan_service.py  recipe_service.py  shopping_list_service.py
backend/src/recipes/sessions/: __init__.py  models.py  store.py
backend/tests/recipes/: conftest.py  test_chat_agent.py  test_chat_api.py  test_classification_models.py  test_enrichment.py  test_importer.py  test_json_repository.py  test_mcp_meal_plan_tools.py  test_mcp_server.py  test_meal_plan_service.py  test_recipe_service.py  test_session_store.py  test_shopping_list_service.py  test_synthesis.py  test_transcription.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
(+18 files in other folders)
