[project]
name = "chef-in-my-pocket-backend"
version = "0.1.0"
description = "Chef in My Pocket MVP backend — recipe import utilities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128",
    "httpx>=0.27",
    "mcp>=1.28.1",
    "pydantic>=2.7",
    "pydantic-ai-slim[mcp,openai]>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",  # function call in default argument (FastAPI/typer-style DI not used, but harmless)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # sys.path bootstrap must precede package imports
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["genai_prices.*"]
ignore_missing_imports = true
